# go2-lab-rough-terrain-locomotion

./: .gitignore  README.md  pyproject.toml  trakr_rl.sh
Metrics/: ood_metrics_Trakr-Eval_2026-06-24_15-22-11.json  ood_metrics_Trakr-Eval_2026-06-24_15-52-31.json  ood_metrics_Trakr-Eval_2026-06-24_16-42-55.json  ood_metrics_Trakr-Eval_2026-06-24_16-49-45.json  ood_metrics_Trakr-Eval_2026-06-24_17-26-54.json
docker/: Dockerfile
docs/: ARCHITECTURE.md  DEPENDENCIES.md  DEPLOYMENT.md  EVALUATION.md  LIMITATIONS.md  README.md  REPRODUCTION.md  RESULTS.md  RUN_COMMANDS.md  SETUP.md  TRAINING.md  (+5 more)
docs /: OOD_findings.md  articulation.md  rewards.md
source/trakr_rl/: MANIFEST.in  pyproject.toml
source/trakr_rl/docs/: CHANGELOG.rst
source/trakr_rl/trakr_rl/assets/robots/: trakr.py  unitree.py
source/trakr_rl/trakr_rl/tasks/locomotion/agents/: rsl_rl_ppo_cfg.py
source/trakr_rl/trakr_rl/tasks/locomotion/mdp/: rewards.py
source/trakr_rl/trakr_rl/tasks/locomotion/robots/trakr/: __init__.py  velocity_env_cfg.py
source/trakr_rl/trakr_rl/tasks/locomotion/robots/trakr-rough/: velocity_env_cfg.py
source/trakr_rl/trakr_rl/tasks/locomotion/robots/trakr-stairs/: velocity_env_cfg.py
source/trakr_rl/trakr_rl/tasks/locomotion/robots/trakr_blocks/: velocity_env_cfg.py
source/trakr_rl/trakr_rl/tasks/mimic/mdp/: __init__.py  observations.py  rewards.py  terminations.py
source/trakr_rl/trakr_rl/tasks/mimic/robots/g1_29dof/dance_102/: __init__.py  tracking_env_cfg.py
source/trakr_rl/trakr_rl/tasks/mimic/robots/g1_29dof/gangnanm_style/: __init__.py  tracking_env_cfg.py
(+585 files in other folders)
