[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go2-lab-rough-terrain-locomotion"
version = "0.1.0"
description = "Blind history-conditioned rough-terrain Go2 locomotion baseline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium",
  "torch",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["go2_rough*"]
