[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go2-lab-rough-terrain-locomotion"
version = "0.1.0"
description = "Blind rough-terrain asymmetric PPO locomotion for Unitree Go2."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["go2_rough*"]
